# B42-cpp-module

./: .gitignore  README.md
cpp00/ex00/: Makefile  ex00.md  megaphone  megaphone.cpp
cpp00/ex00/md/: ex00.md
cpp00/ex00/src/: megaphone.cpp
cpp00/ex01/: CMakeLists.txt  Makefile  phonebook
cpp00/ex01/backup/: main.cpp
cpp00/ex01/backup/Contact/: Contact.cpp  Contact.h
cpp00/ex01/backup/PhoneBook/: PhoneBook.cpp  PhoneBook.h
cpp00/ex01/md/: ex01.md
cpp00/ex01/src/: Contact.cpp  Contact.h  PhoneBook.cpp  PhoneBook.h  main.cpp  utils.cpp
cpp00/ex01/src/Contact/: Contact.cpp  Contact.h
cpp00/ex01/src/PhoneBook/: PhoneBook.cpp  PhoneBook.h
cpp00/ex02/: CMakeLists.txt  Makefile  dreamjob  test (copy).sh
cpp00/ex02/src/: Account.cpp  Account.hpp
cpp01/: note.md
cpp01/ex00/: BrainzzZ  CMakeLists.txt  Makefile
cpp01/ex00/src/: main.cpp
cpp01/ex00/src/Zombie/: Zombie.cpp  Zombie.h  newZombie.cpp  randomChump.cpp
cpp01/ex01/: CMakeLists.txt  Makefile  brainz
cpp01/ex01/src/: main.cpp  zombieHorde.cpp
cpp01/ex02/: CMakeLists.txt  Makefile  heybrain
cpp01/ex02/src/: main.cpp
cpp01/ex03/: CMakeLists.txt  Makefile  necessary_violence
cpp01/ex04/: CMakeLists.txt  Makefile
cpp01/ex04/include/: macro.h
cpp01/ex04/src/: main.cpp
cpp01/ex04/src/Replace/: Replace.cpp  Replace.h
cpp01/ex05/: CMakeLists.txt  Makefile
cpp02/: note.md
cpp02/ex00/: Makefile
cpp02/ex01/: fixed
cpp02/ex02/: CMakeLists.txt  Makefile
cpp02/ex03/: CMakeLists.txt  Makefile  fixed
cpp03/ex00/: CMakeLists.txt  Makefile
cpp03/ex01/: CMakeLists.txt  Makefile
cpp03/ex02/: CMakeLists.txt  Makefile  trap
cpp03/ex03/: CMakeLists.txt  Makefile  trap
cpp04/ex00/: CMakeLists.txt  Makefile
cpp04/ex01/: CMakeLists.txt  Makefile  animal
cpp04/ex01/src/: main.cpp
cpp04/ex01/src/Animal/: Animal.cpp
cpp04/ex01/src/Brain/: Brain.cpp  Brain.h
cpp04/ex01/src/Cat/: Cat.cpp  Cat.h
cpp04/ex01/src/Dog/: Dog.cpp  Dog.h
cpp04/ex02/: CMakeLists.txt  Makefile
cpp04/ex03/: CMakeLists.txt  Makefile
cpp05/ex00/: Makefile  bureaucrat
cpp05/ex01/: Makefile
cpp05/ex02/: Makefile  bureaucrat
cpp05/ex03/: Makefile  bureaucrat
cpp06/: Makefile
cpp06/ex00/: Makefile
cpp06/ex01/: Makefile
cpp06/ex02/: Makefile
cpp07/ex00/: Makefile  whatever
cpp07/ex01/: Makefile
cpp07/ex02/: Makefile
cpp08/ex00/: Makefile  easyfind
cpp08/ex01/: Makefile  span
cpp08/ex02/: Makefile
cpp09/ex00/: CMakeLists.txt  Makefile  btc
cpp09/ex01/: CMakeLists.txt  Makefile  RPN
template/: CMakeLists.txt  Makefile
(+146 files in other folders)
